--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+#test adding custom policy to role
 env:
   
   AWS_REGION : "us-east-1" #Change to reflect your Region
