--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,7 @@ on:
   pull_request:
     branches: [ master ]
 #test adding custom policy to role
+#changed policy to reflect just user/repo
 env:
   
   AWS_REGION : "us-east-1" #Change to reflect your Region
