--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,8 +13,9 @@ env:
 
 # Permission can be added at job level or workflow level    
 permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+  id-token: write
+  contents: read
+
 
 jobs:
   AssumeRoleAndCallIdentity:
@@ -34,4 +35,4 @@ jobs:
           aws sts get-caller-identity
       - name: Upload to S3
         run: |
-          aws s3 sync $GITHUB_WORKSPACE s3://codywaits-crc --region us-east-1
+          aws s3 sync $GITHUB_WORKSPACE s3://codywaits-crc --region ${{ env.AWS_REGION }}
