--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches: [ master ]
 
-#test adding custom policy to role
-#changed policy to reflect just user/repo
-#updated policy to include sts
+#added an updated trust policy to hopefully validate credentials
 env:
   
   AWS_REGION : "us-east-1" #Change to reflect your Region
@@ -25,7 +23,7 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::662458713737:role/GitHubAction-AssumeRoleWithAction #change to reflect your IAM role’s ARN
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
